Fix spacing and font sizing

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -47,13 +47,11 @@ h1
   font-size: 3em
   letter-spacing: 20px
   text-transform: uppercase
-  line-height: 1.5em
 
 h2
   font-size: 2em
   font-weight: 600
   letter-spacing: .5em
-  line-height: 2em
   text-transform: uppercase
 
 h3
@@ -79,8 +77,8 @@ a
 
 p
   font-family: Lora, serif
-  font-size: 1.2em
-  line-height: 1.5em
+  font-size: 1.4em
+  // line-height: 1em
 
 section
   display: flex
@@ -106,7 +104,7 @@ aside
 img
   display: block
   margin: 0 auto 1em
-  padding-top: 3em
+  padding-top: 1em
   width: 100px
 [v-cloak]
   opacity: 0
